Add two more recipes and finishing touches

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
       Odin Recipes
     </h1>
     <a href="recipes/pannkakor.html">Pannkakor</a>
+    <a href="recipes/vafflor.html">Våfflor</a>
+    <a href="recipes/fattiga-riddare.html">Fattiga riddare</a>
+    
   </body>
 </html>
