--- a/recipes/vafflor.html
+++ b/recipes/vafflor.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pannkakor</title>
+    <title>Våfflor</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>
-      Pannkakor
+      Våfflor
     </h1>
-
-    <img src="images/pannkakor.webp" alt="A picture of pancakes." 
+    <img src="images/vafflor.webp" alt="A picture of waffles." 
     style="
       height: 400px; 
       height: 400px; 
@@ -21,7 +20,7 @@
       Description
     </h2>
     <p>
-      Gott recept för tunna och krispiga pannkakor.
+      Gott recept för tunna och krispiga våfflor.
     </p>
     <p>
       Perfekt för trötta söndagsmorgonar.
@@ -30,14 +29,18 @@
       Ingredients
     </h2>
     <ul>
-      <li>2 dl mjöl</li>
-      <li>4 ägg</li>
-      <li>8 dl mjölk</li>
+      <li>100 g smör</li>
+      <li>4 dl mjöl</li>
+      <li>2 ägg</li>
+      <li> 3 dl mjölk</li>
+      <li>2 tsk bakpulver</li>
     </ul>
     <ol>
+      <li>Smält smör i en kastrull</li>
       <li>Vispa ihop ägg och mjölk i en bunke.</li>
-      <li>Skikta långsamt i mjölet under rörning.</li>
-      <li>Häll smet så att det täcker stekpannan och stek sedan på medel värme. </li>
+      <li>Skikta långsamt i mjöl under rörning och tillsätt bakpulver.</li>
+      <li>Tillsätt smöret.</li>
+      <li>Grädda våfflorna i ett våffeljärn.</li>
     </ol>
     <a href="../index.html">Home</a>
   </body>
