--- a/recipes/fattiga-riddare.html
+++ b/recipes/fattiga-riddare.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pannkakor</title>
+    <title>Fattiga riddare</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>
-      Pannkakor
+      Fattiga riddare
     </h1>
-
-    <img src="images/pannkakor.webp" alt="A picture of pancakes." 
+    <img src="images/fattiga-riddare.webp" alt="A picture of french toast." 
     style="
       height: 400px; 
       height: 400px; 
       object-fit: cover; 
-      object-position: right;
+      object-position: center;
     ">
     <h2>
       Description
     </h2>
     <p>
-      Gott recept för tunna och krispiga pannkakor.
+      Gott recept för frasiga fattiga riddare som smälter i din mun.
     </p>
     <p>
       Perfekt för trötta söndagsmorgonar.
@@ -30,14 +29,15 @@
       Ingredients
     </h2>
     <ul>
-      <li>2 dl mjöl</li>
-      <li>4 ägg</li>
-      <li>8 dl mjölk</li>
+      <li>1/2 krm salt</li>
+      <li>1 ägg</li>
+      <li>2 dl mjölk</li>
+      <li>5st skivor vitt bröd.</li>
     </ul>
     <ol>
       <li>Vispa ihop ägg och mjölk i en bunke.</li>
-      <li>Skikta långsamt i mjölet under rörning.</li>
-      <li>Häll smet så att det täcker stekpannan och stek sedan på medel värme. </li>
+      <li>Häll i salt.</li>
+      <li>Doppa brödet i smeten och stek på medelhög värme. </li>
     </ol>
     <a href="../index.html">Home</a>
   </body>
