Put links on index page in list

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <h1>
       Odin Recipes
     </h1>
-    <a href="recipes/pannkakor.html">Pannkakor</a>
-    <a href="recipes/vafflor.html">Våfflor</a>
-    <a href="recipes/fattiga-riddare.html">Fattiga riddare</a>
-    
+    <ul>
+      <li><a href="recipes/pannkakor.html">Pannkakor</a></li>
+      <li><a href="recipes/vafflor.html">Våfflor</a></li>
+      <li><a href="recipes/fattiga-riddare.html">Fattiga riddare</a></li>
+    </ul>
   </body>
 </html>
