Commit before wipe

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <title>Recipes</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/index.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      Odin Recipes
-    </h1>
-    <ul>
-      <li><a href="recipes/pannkakor.html">Pannkakor</a></li>
-      <li><a href="recipes/vafflor.html">Våfflor</a></li>
-      <li><a href="recipes/fattiga-riddare.html">Fattiga riddare</a></li>
-    </ul>
+    <nav class="navigation">
+      <h1>
+        Odin Recipes
+      </h1>
+      <ul>
+        <li><a href="recipes/pannkakor.html">Pannkakor</a></li>
+        <li><a href="recipes/vafflor.html">Våfflor</a></li>
+        <li><a href="recipes/fattiga-riddare.html">Fattiga riddare</a></li>
+      </ul>
+    </nav>
+    
   </body>
 </html>
