--- a/index.html
+++ b/index.html
@@ -4,18 +4,43 @@
     <title>Recipes</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link href="styles/index.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <nav class="navigation">
       <h1>
         Odin Recipes
       </h1>
-      <ul>
-        <li><a href="recipes/pannkakor.html">Pannkakor</a></li>
-        <li><a href="recipes/vafflor.html">Våfflor</a></li>
-        <li><a href="recipes/fattiga-riddare.html">Fattiga riddare</a></li>
-      </ul>
+      <div class="recipes-list">
+        <div class="recipe">
+          <img src="recipes/images/fattiga-riddare.webp" alt="An image of pancakes." class="recipe-image">
+          <div>
+            <a class="recipe-link" href="recipes/fattiga-riddare.html">Fattiga riddare</a>
+            <p class="recipe-description-short">
+              Gott recept för tunna och krispiga pannkakor.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="recipes-list">
+        <div class="recipe">
+          <img src="recipes/images/fattiga-riddare.webp" alt="An image of pancakes." class="recipe-image">
+          <a class="recipe-link" href="recipes/pannkakor.html">Pannkakor</a>
+        </div>
+      </div>
+      <div class="recipes-list">
+        <div class="recipe">
+          <img src="recipes/images/fattiga-riddare.webp" alt="An image of pancakes." class="recipe-image">
+          <a class="recipe-link" href="recipes/vafflor.html">Våfflor</a>
+        </div>
+      </div>
+     
     </nav>
     
   </body>
