Finish index page

--- a/index.html
+++ b/index.html
@@ -17,27 +17,40 @@
       <h1>
         Odin Recipes
       </h1>
+
       <div class="recipes-list">
         <div class="recipe">
-          <img src="recipes/images/fattiga-riddare.webp" alt="An image of pancakes." class="recipe-image">
+          <img src="recipes/images/fattiga-riddare.webp" alt="An image of french toast." class="recipe-image">
           <div>
             <a class="recipe-link" href="recipes/fattiga-riddare.html">Fattiga riddare</a>
             <p class="recipe-description-short">
-              Gott recept för tunna och krispiga pannkakor.
+              Gott recept för frasiga fattiga riddare som smälter i din mun. 
             </p>
           </div>
         </div>
       </div>
+
       <div class="recipes-list">
         <div class="recipe">
-          <img src="recipes/images/fattiga-riddare.webp" alt="An image of pancakes." class="recipe-image">
-          <a class="recipe-link" href="recipes/pannkakor.html">Pannkakor</a>
+          <img src="recipes/images/pannkakor.webp" alt="An image of pancakes." class="recipe-image">
+          <div>
+            <a class="recipe-link" href="recipes/pannkakor.html">Pannkakor</a>
+            <p class="recipe-description-short">
+              Gott recept för tunna och krispiga pannkakor. 
+            </p>
+          </div>
         </div>
       </div>
+      
       <div class="recipes-list">
         <div class="recipe">
-          <img src="recipes/images/fattiga-riddare.webp" alt="An image of pancakes." class="recipe-image">
-          <a class="recipe-link" href="recipes/vafflor.html">Våfflor</a>
+          <img src="recipes/images/vafflor.webp" alt="An image of waffles." class="recipe-image">
+          <div>
+            <a class="recipe-link" href="recipes/vafflor.html">Våfflor</a>
+            <p class="recipe-description-short">
+              Gott recept för tunna och krispiga våfflor. 
+            </p>
+          </div>
         </div>
       </div>
      
