Start to add style and css for recipe page

--- a/recipes/pannkakor.html
+++ b/recipes/pannkakor.html
@@ -4,19 +4,24 @@
     <title>Pannkakor</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipe.css"> 
   </head>
   <body>
+    <header class="header">
+      <a href="../index.html">
+        <p class="home-header-link">
+          Home
+        </p>
+      </a>
+
+      <img src="../images/favicon.png" alt="An icon of a pot." class="icon-pic">
+      
+    </header>
     <h1>
       Pannkakor
     </h1>
 
-    <img src="images/pannkakor.webp" alt="A picture of pancakes." 
-    style="
-      height: 400px; 
-      height: 400px; 
-      object-fit: cover; 
-      object-position: right;
-    ">
+    <img src="images/pannkakor.webp" alt="A picture of pancakes." class="recipe-pic">
     <h2>
       Description
     </h2>
