Add css to all recipes and finishing touches

--- a/recipes/fattiga-riddare.html
+++ b/recipes/fattiga-riddare.html
@@ -4,20 +4,26 @@
     <title>Fattiga riddare</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipe.css"> 
   </head>
   <body>
+    <header class="header">
+      <a href="../index.html">
+        <p class="home-header-link">
+          Home
+        </p>
+      </a>
+
+      <img src="../images/favicon.png" alt="An icon of a pot." class="icon-pic">
+      
+    </header>
+
     <h1>
       Fattiga riddare
     </h1>
-    <img src="images/fattiga-riddare.webp" alt="A picture of french toast." 
-    style="
-      height: 400px; 
-      height: 400px; 
-      object-fit: cover; 
-      object-position: center;
-    ">
+    <img src="images/fattiga-riddare.webp" alt="A picture of french toast." class="recipe-pic">
     <h2>
-      Description
+      Beskrivning
     </h2>
     <p>
       Gott recept för frasiga fattiga riddare som smälter i din mun.
@@ -26,7 +32,7 @@
       Perfekt för trötta söndagsmorgonar.
     </p>
     <h2>
-      Ingredients
+      Ingredienser
     </h2>
     <ul>
       <li>1/2 krm salt</li>
@@ -34,11 +40,13 @@
       <li>2 dl mjölk</li>
       <li>5st skivor vitt bröd.</li>
     </ul>
+    <h2>
+      Instruktioner
+    </h2>
     <ol>
       <li>Vispa ihop ägg och mjölk i en bunke.</li>
       <li>Häll i salt.</li>
       <li>Doppa brödet i smeten och stek på medelhög värme. </li>
     </ol>
-    <a href="../index.html">Home</a>
   </body>
 </html>
