--- a/recipes/pannkakor.html
+++ b/recipes/pannkakor.html
@@ -23,7 +23,7 @@
 
     <img src="images/pannkakor.webp" alt="A picture of pancakes." class="recipe-pic">
     <h2>
-      Description
+      Beskrivning
     </h2>
     <p>
       Gott recept för tunna och krispiga pannkakor.
@@ -32,18 +32,20 @@
       Perfekt för trötta söndagsmorgonar.
     </p>
     <h2>
-      Ingredients
+      Ingredienser
     </h2>
     <ul>
       <li>2 dl mjöl</li>
       <li>4 ägg</li>
       <li>8 dl mjölk</li>
     </ul>
+    <h2>
+      Instruktioner
+    </h2>
     <ol>
       <li>Vispa ihop ägg och mjölk i en bunke.</li>
       <li>Skikta långsamt i mjölet under rörning.</li>
       <li>Häll smet så att det täcker stekpannan och stek sedan på medel värme. </li>
     </ol>
-    <a href="../index.html">Home</a>
   </body>
 </html>
