--- a/recipes/vafflor.html
+++ b/recipes/vafflor.html
@@ -4,20 +4,26 @@
     <title>Våfflor</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipe.css"> 
   </head>
   <body>
+    <header class="header">
+      <a href="../index.html">
+        <p class="home-header-link">
+          Home
+        </p>
+      </a>
+
+      <img src="../images/favicon.png" alt="An icon of a pot." class="icon-pic">
+      
+    </header>
+
     <h1>
       Våfflor
     </h1>
-    <img src="images/vafflor.webp" alt="A picture of waffles." 
-    style="
-      height: 400px; 
-      height: 400px; 
-      object-fit: cover; 
-      object-position: right;
-    ">
+    <img src="images/vafflor.webp" alt="A picture of waffles." class="recipe-pic">
     <h2>
-      Description
+      Beskrivning
     </h2>
     <p>
       Gott recept för tunna och krispiga våfflor.
@@ -26,7 +32,7 @@
       Perfekt för trötta söndagsmorgonar.
     </p>
     <h2>
-      Ingredients
+      Ingredienser
     </h2>
     <ul>
       <li>100 g smör</li>
@@ -35,6 +41,9 @@
       <li> 3 dl mjölk</li>
       <li>2 tsk bakpulver</li>
     </ul>
+    <h2>
+      Instruktioner
+    </h2>
     <ol>
       <li>Smält smör i en kastrull</li>
       <li>Vispa ihop ägg och mjölk i en bunke.</li>
@@ -42,6 +51,5 @@
       <li>Tillsätt smöret.</li>
       <li>Grädda våfflorna i ett våffeljärn.</li>
     </ol>
-    <a href="../index.html">Home</a>
   </body>
 </html>
